--- a/React/10-routers/package.json
+++ b/React/10-routers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "9-http-app",
+  "name": "10-routers",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
